--- a/node-lessons/package.json
+++ b/node-lessons/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bl": "^6.0.1",
-    "strftime": "^0.10.1"
+    "strftime": "^0.10.1",
+    "through2-map": "^3.0.0"
   }
 }
